[metadata]
name = tellopython
version = 0.1.0
author = zahtec
description = A Python library for controlling Tello drones using the 1.3 or 2.0 SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zahtec/tellopython
download_url = https://github.com/zahtec/tellopython/archive/v0.1.0.zip
keywords =
    tello
    drones
    drone
    sdk
    dji
    djitello
    interface
    video
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Natural Language :: English

[options]
package_dir =
    = tellopython
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude =
    examples*
